Fix - Preserve line breaks in therapeutic notes

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -191,3 +191,7 @@ span.preformated {
 .ng-hide.ng-hide-animate{
   display: none !important;
 }
+
+.line-break-preserve {
+  white-space: pre-wrap;
+}
